# programmiersprachen-raytracer

./: README.md
SDF-Scene/: composite.sdf  example.sdf  experiment.sdf  ppoint.sdf  scene.sdf  test.sdf  test2.sdf
framework/: CMakeLists.txt  box.cpp  box.hpp  camera.hpp  color.hpp  cone.cpp  hitpoint.hpp  light.hpp  material.cpp  material.hpp  pixel.cpp  pixel.hpp  plane.hpp  ppmwriter.cpp  ppmwriter.hpp  ray.cpp  ray.hpp  read_sdf.cpp  read_sdf.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  window.cpp  window.hpp  zylinder.cpp  zylinder.hpp
framework/shapes/: box.cpp  box.hpp  composite.cpp  composite.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  plane.cpp  plane.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
source/: CMakeLists.txt  raytracer.cpp  tests.cpp
